--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,22 +3,116 @@
   margin: auto;
   font-family: Arial, Helvetica, sans-serif;
   color: #777777;
-}
-
-header {
-  height: 60px;
-  background-color: #ffffff;
-  border-bottom: #cccccc;
-  border-style: solid;
-  margin-bottom: 10px; 
-  overflow: auto;
-
+  text-decoration: none;
 }
 
 #name {
-  margin-left: 20%;
+  font-family: Georgia, 'Times New Roman', Times, serif;
   background-color: #4aaaa5;
-  padding: 20px;
-  text-align: center;
+  color: #ffffff;
+  padding: 10px;
+}
+
+#heading {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+header {
+  width: 100%;
+  background-color: #ffffff;
+  border-bottom: solid #cccccc;
+  margin-bottom: 20px; 
+  overflow: auto;
+}
+
+.headercontent {
+  width: 960px;
+  margin: auto;
+}
+
+h1 {
+  float: left;
+  vertical-align: middle;
+}
+
+nav {
+  float: right;
+  padding-top: 20px;
+}
+
+#about {
+  margin-right: 15px;
+}
+
+#portfolio {
+  margin-right: 15px;
+}
+
+section {
+  clear: both;
+  width: 960px;
+  margin: auto;
+  background-color: #ffffff;
+  border: solid 1px #cccccc;
+  padding: 15px;
+  overflow: auto;
+}
+
+h2 {
+  color: #4aaaa5;
+  padding: 15px;
+  border-bottom: solid #cccccc;
+  margin-bottom: 15px;
+}
+
+img {
   width: 20%;
+  float: left;
+  margin-right: 15px;
+
+}
+
+footer {
+  background-color: #666666;
+  color: #ffffff;
+  text-align: center;
+  vertical-align: bottom;
+  border-top: #4aaaa5 5px solid;
+  ;
+  
+}
+
+.content {
+  min-height: calc(100vh - 50px);
+}
+.footer {
+  height: 50px;
+}
+
+.input {
+  width: 100%;
+  padding: 10px;
+
+}
+
+#message {
+  height: 150px;
+  box-sizing: border-box;
+  text-align: left;
+  vertical-align: text-top;
+
+} 
+
+#submit {
+  background-color: #4aaaa5;
+  color: #ffffff;
+  padding: 10px 15px;
+  text-decoration: none;
+}
+
+.portfolioImg {
+  width: 33%;
+  margin: 10px;
+  height: 200px;
+  float: left;
 }
